--- a/mystyle.css
+++ b/mystyle.css
@@ -10,3 +10,21 @@ p {
   color: black;
   margin-left: 20px;
 }
+
+.div-1 {
+  background-color: blue; 
+  height: 50px;
+  width: 50px;
+}
+   
+.div-2 {
+  background-color: red; 
+  height: 100px;
+  width: 100px;
+}
+   
+.div-3 {
+  background-color: yellow; 
+  height: 200px;
+  width: 200px;
+}
