--- a/mystyle.css
+++ b/mystyle.css
@@ -2,29 +2,17 @@ body {
   background-color: white;
 }
 
-h1 {
-  color: black;
-  margin-left: 20px;
-}
-p {
-  color: black;
-  margin-left: 20px;
-}
-
-.div-1 {
-  background-color: blue; 
-  height: 50px;
-  width: 50px;
+.mainHead {
+  font-family: monaco;
+  background-color: beige; 
+  height: 500px;
+  width: 500px;
 }
    
-.div-2 {
-  background-color: red; 
+.openingParagraph {
+  background-color: linen; 
   height: 100px;
   width: 100px;
 }
    
-.div-3 {
-  background-color: yellow; 
-  height: 200px;
-  width: 200px;
-}
+
