--- a/mystyle.css
+++ b/mystyle.css
@@ -10,7 +10,7 @@ body {
 }
    
 .openingParagraph {
-  background-color: linen; 
+  background-color: lightblue; 
   height: 500px;
   width: 500px;
 }
