--- a/mystyle.css
+++ b/mystyle.css
@@ -1,14 +1,17 @@
 body {
   background-color: #c1d7d9;
 }
-
 .mainHead {
   font-family: belwe-bold;
+  font-size: 36 px;
   background-color: #c1d7d9; 
-  height: 500px;
-  width: 50px;
+  height: 50px;
+  width: 75px;
 }
-
+p {
+  /* Center horizontally*/
+  text-align: center;
+}
 .subHead {
   font-family: roboto-mono;
   background-color: #c1d7d9; 
