--- a/mystyle.css
+++ b/mystyle.css
@@ -6,10 +6,8 @@ body {
   font-weight: bold;
   font-size: 600;
   background-color: #dae8e7; 
-  height: 700px;
-  width: 350px;
   text-align: center;
-  color: #57646b
+  color: #586970
 }
 .subHead {
   font-family: roboto;
