--- a/mystyle.css
+++ b/mystyle.css
@@ -1,16 +1,15 @@
 body {
-  background-color: #dae8e7;
+  background-color: #abc4cf;
 }
 .mainHead {
   font-family: belwe;
   font-weight: bold;
-  font-size: 600;
   background-color: #dae8e7; 
   text-align: center;
-  color: #586970
+  color: #5b696e
 }
 .subHead {
-  font-family: roboto;
+  font-family: "Roboto";
   font-weight: bold;
   background-color: #dae8e7; 
   height: 200px;
