--- a/mystyle.css
+++ b/mystyle.css
@@ -17,7 +17,7 @@ body {
 }
 .openingParagraph {
   font-family: "Roboto";
-  list-style-type: circle;
+  list-style-type: none;
   background-color: #dae8e7; 
   height: 500px;
   width: 500px;
