--- a/mystyle.css
+++ b/mystyle.css
@@ -22,5 +22,19 @@ body {
   height: 500px;
   width: 500px;
 }
+
+ul {
+  margin: 0;
+}
+ul.dashed {
+  list-style-type: none;
+}
+ul.dashed > li {
+  text-indent: -5px;
+}
+ul.dashed > li:before {
+  content: "-";
+  text-indent: -5px;
+}
    
 
