--- a/mystyle.css
+++ b/mystyle.css
@@ -9,11 +9,11 @@ body {
   text-align: center;
   color: #5b696e
 }
-.flex-container {
-  display: flex;
-  height: 600px;
-  flex-wrap: wrap;
-  align-content: center;
+.flexContainer{
+  display:flex;
+  align-items: center;
+  justify-content: left;
+  flex-direction: column;
 }
 .subHead {
   font-family: monaco;
