--- a/mystyle.css
+++ b/mystyle.css
@@ -14,6 +14,7 @@ body {
   align-items: center;
   justify-content: left;
   flex-direction: column;
+  width: 50%;
 }
 .subHead {
   font-family: monaco;
