--- a/starter-template.css
+++ b/starter-template.css
@@ -1,21 +1,50 @@
-.icon-list {
-  padding-left: 0;
-  list-style: none;
+body {
+  background-color: #abc4cf;
 }
-.icon-list li {
-  display: flex;
-  align-items: flex-start;
-  margin-bottom: .25rem;
+.mainHead {
+  font-family: belwe;
+  font-weight: bold;
+  font-size: 100px;
+  background-color: #abc4cf; 
+  text-align: center;
+  color: #5b696e
 }
-.icon-list li::before {
-  display: block;
-  flex-shrink: 0;
-  width: 1.5em;
-  height: 1.5em;
-  margin-right: .5rem;
-  content: "";
-  background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23212529' viewBox='0 0 16 16'%3E%3Cpath d='M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0zM4.5 7.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H4.5z'/%3E%3C/svg%3E") no-repeat center center / 100% auto;
+.flexContainer{
+  display:flex;
+  align-items: center;
+  justify-content: left;
+  flex-direction: column;
+  width: 50%;
 }
+.subHead {
+  font-family: monaco;
+  font-weight: bold;
+  background-color: #abc4cf; 
+  text-align: center-left
+  height: 200px;
+  width: 200px;
+}
+.openingParagraph {
+  font-family: monaco;
+  background-color: #abc4cf; 
+  height: 500px;
+  width: 500px;
+}
+ul {
+  margin: 0;
+}
+ul.dashed {
+  list-style-type: none;
+}
+ul.dashed > li {
+  text-indent: -5px;
+  font-family: monaco;
+}
+ul.dashed > li:before {
+  content: "-";
+  text-indent: -5px;
+}
+
 
 
 
