--- a/mystyle.css
+++ b/mystyle.css
@@ -12,7 +12,7 @@ body {
 .flexContainer{
   display:flex;
   align-items: center;
-  justify-content: left;
+  justify-content: center;
   flex-direction: column;
   width: 50%;
 }
